# bibs

./: .gitignore  Jenkinsfile  README.md  meson.build
docker/: Dockerfile
docs/: Doxyfile  conf.py  index.rst
exe/: main.cpp  meson.build
include/: bibs.hpp
include/bibs/: agent.hpp  behaviour.hpp  belief.hpp  bibs.hpp  simulation.hpp
src/: agent.cpp  behaviour.cpp  belief.cpp  bibs.cpp  meson.build  simulation.cpp
test/: agent.cpp  agent.hpp  behaviour.cpp  behaviour.hpp  belief.cpp  belief.hpp  bibs.cpp  meson.build  simulation.cpp
